feat(opencode): add HTTP bridge
Start the user-managed opencode CLI through the SDK, send prompts
through the session API, stream event deltas, and load session history.

Provider auth, model config, and CLI installation remain owned by the
user's opencode setup.